@@ -5,6 +5,10 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+August 28, 2007
+* [FOD] Fixed wrong destructors called in openjpeg.c
+* [FOD] Fixed bug in j2k_decode_jpt_stream
+
 August 24, 2007
 * [Parvatha] The end of main header is calculated after TLM and POC marker for Dcinema.
 
